# sacksbiax

./: .gitignore  README.md  pyproject.toml
src/sacksbiax/: biaxpp.py  biaxpp_deprecated.py  bxconv.py  bxpp.py  convert.py  data.py  datatypes.py  main.py  sackspp.py  types.py
src/sacksbiax/converter/: core.py  io.py
src/sacksbiax/core/: __init__.py  biax.py  core.py  indexing.py  io.py  utils.py
src/sacksbiax/io/: __init__.py  io.py  parser.py
src/sacksbiax/parsers/: __init__.py  parser.py
src/sacksbiax/sacks/: __init__.py  core.py  fio.py
src/sacksbiax/tools/: logging.py
