[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sacksbiax"
version = "0.0.1"
authors = [{ name = "Will Zhang", email = "willwz@gmail.com" }]
description = "Python module for Sacks' biax."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Linux",
  "Development Status :: 0 - Alpha",
]
dependencies = ["numpy", "scipy", "matplotlib", "pandas", "xlsxwriter"]

[project.scripts]
biaxpp = "sacksbiax.main:main_cli"
bxconv = "sacksbiax.convert:main_cli"
